--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- Scene Scritps -->
     <script src="Scripts/scenes/scene.js"></script>
     <script src="Scripts/scenes/play.js"></script>
+    <script src="Scripts/scenes/over.js"></script>
     <script src="Scripts/scenes/menu.js"></script>
     
     
