--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
         <canvas id="canvas"></canvas>
     </div>
-    
+    <!--Testing -->
     <!-- JavaScript Section -->
     <script src="Scripts/lib/EaselJS/lib/easeljs-0.8.2.min.js"></script>
     <script src="Scripts/lib/TweenJS/lib/tweenjs-0.6.2.min.js"></script>
